# productos_estrella

./: .gitignore  docker-compose.yml
src/ProdEstrella_bot/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  clear_history.py  get_logs.py  get_logs_all.py  pyproject.toml  seed_db.py  tasks.md  test_db.py
src/ProdEstrella_bot/.agents/workflows/: deploy.md
src/ProdEstrella_bot/app/: main.py
src/ProdEstrella_bot/app/ai/: routing.py
src/ProdEstrella_bot/app/core/: config.py  database.py  logging.py  redis_client.py  session.py
src/ProdEstrella_bot/app/domain/models/: __init__.py  conversation.py  customer.py  order.py  product.py  short_link.py
src/ProdEstrella_bot/app/messaging/: factory.py  protocols.py
src/ProdEstrella_bot/app/messaging/providers/evolution/: adapter.py  schemas.py
src/ProdEstrella_bot/app/messaging/providers/meta/: adapter.py  schemas.py
src/ProdEstrella_bot/app/payments/: mercadopago.py
src/ProdEstrella_bot/app/routers/admin/: auth.py  dashboard.py
src/ProdEstrella_bot/app/routers/public/: __init__.py  redirect.py
src/ProdEstrella_bot/app/routers/webhooks/: mercadopago.py  whatsapp.py
src/ProdEstrella_bot/app/templates/admin/: dashboard.html  login.html
src/ProdEstrella_bot/migrations/: env.py
src/ProdEstrella_bot/migrations/versions/: 0001_initial_phase_2.py  0002_add_items_to_order.py  0003_add_short_links.py
src/ProdEstrella_bot/scripts/: test_mp_live.py
src/productosEstrella_Infoproductos/: .gitignore  DEPLOY.md  Dockerfile  main.py  requirements.txt  robots.txt  tasks.md
src/productosEstrella_Infoproductos/products/el-arte-del-sueno-profundo/: index.html  meta.json  politica-privacidad.html  terminos-condiciones.html
src/productosEstrella_Infoproductos/products/el-arte-del-sueno-profundo/css/: style.css
src/productosEstrella_Infoproductos/products/el-arte-del-sueno-profundo/js/: script.js
src/productosEstrella_Infoproductos/scripts/: compress_images.py  deploy.sh  optimize_product.py
src/productosEstrella_Infoproductos/shared/: scripts_header.html
src/productosEstrella_Infoproductos/templates/: 404.html  home.html
